about festival section added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
             <source src="./video/concierto.webm" type="video/webm" />
         </video>
     </div>
+
+    <section class="sobre-festival">
+        <div class="imagen">
+            <img src="./img/imagen_vocalista.jpg" alt="Sobre festival"/>
+        </div>
+        <div class="contenido-festival">
+            <h2>Rock & EDM Festival</h2>
+            <p class="fecha">Julio 2026, CDMX México</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime porro, aperiam rerum suscipit nesciunt reiciendis ea? Eligendi, deserunt illo quisquam facilis repellat optio. Beatae excepturi nihil possimus unde velit culpa?</p>
+        </div>
+    </section>
 </body>
 
 </html>
