footer section added

--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="contenedor">
+            <p>Rock & EDM Festival. Todos los derechos reservados</p>
+        </div>
+    </footer>
 </body>
 
 </html>
