gulpfile: added task and series function to compile js code

--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
             <p>Rock & EDM Festival. Todos los derechos reservados</p>
         </div>
     </footer>
+
+    <script src="./build/js/app.js"></script>
 </body>
 
 </html>
